syntax = "proto3";

package pb.unit.user;
option go_package = "github.com/byeol-i/firebase-auth-module/pb/unit/user";

message User {
    UserCredential userCredential = 1;
    string name = 2;
    string email = 3;
}

message UserCredential {
    string uid = 1;
}
